k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traci
  annotations:
    description: Namespace для работы с сервисом Traci
