k8s/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traci-backend
  namespace: traci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traci-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traci-backend
    spec:
      containers:
      - image: traci-backend:v1
        imagePullPolicy: Never
        name: traci-backend
        ports:
        - containerPort: 8080
...
