k8s/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traci-frontend
  namespace: traci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traci-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traci-frontend
    spec:
      containers:
      - image: traci-frontend:v1
        imagePullPolicy: Never
        name: traci-frontend
        ports:
        - containerPort: 80
...
