k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traci-postgres
  namespace: traci
spec:
  serviceName: traci-postgres
  replicas: 1
  selector:
    matchLabels:
      app: traci-postgres
  template:
    metadata:
      labels:
        app: traci-postgres
    spec:
      containers:
      - name: traci-postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: traci-claim
